HSL class creation for future coding

--- a/BildProgram/BildProgram.csproj
+++ b/BildProgram/BildProgram.csproj
@@ -57,6 +57,7 @@
     </ApplicationDefinition>
     <Compile Include="DetectAndMarkPixels.cs" />
     <Compile Include="DetectColorPixel.cs" />
+    <Compile Include="HSL.cs" />
     <Compile Include="ImagePixelsValue.cs" />
     <Compile Include="PixelPosition.cs" />
     <Compile Include="RGBaValue.cs" />
